# spotbee

./: .env.example  .gitignore  README.md  extract_songs.py  extract_youtube_urls.py  main.py  pyproject.toml  ytsearch.py
.github/workflows/: publish.yml
examples/: get_track_titles.py  get_urls.py
scripts/: publish.sh
spotbee/: __init__.py  __main__.py  spotify.py  ytsearch.py
spotbeeV2/: __init__.py
