[tool.poetry]
name = "spotify-to-youtube"
version = "0.1.0"
description = "A simple program that converts Spotify Playlists into a list of Youtube songs"
authors = ["Nishant Sapkota <snishant306@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
spotipy = "^2.19.0"
python-dotenv = "^0.19.1"
youtube_dl = "^2021.6.6"
youtube-search = "^2.1.0"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
