[tool.poetry]
name = "spotbee"
version = "1.0.0"
description = "A simple module that converts Spotify Playlists into a list of Youtube URLs"
authors = ["Nishant Sapkota <snishant306@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/thenishantsapkota/spotbee"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.9"
spotipy = "^2.19.0"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
